--- a/DocumentStoreTemplate/DocumentStoreTemplate.csproj
+++ b/DocumentStoreTemplate/DocumentStoreTemplate.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
         <PackageReference Include="Npgsql" Version="4.0.4" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
+        <PackageReference Include="WebApiContrib.Core.Formatter.Csv" Version="3.0.0" />
     </ItemGroup>
 
 
